--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Diligent Vessel Foundation - Empowering communities across Ghana through education, healthcare, sustainability, and humanitarian aid." />
+    <meta name="description" content="Diligent Vessel Foundation - Empowering communities through education, healthcare, and economic development in Ghana." />
     <meta name="keywords" content="NGO, non-profit, charity, foundation, humanitarian, education, sustainability, Ghana, Koforidua, community development" />
     <meta name="author" content="Diligent Vessel Foundation" />
-    <meta property="og:title" content="Diligent Vessel Foundation - Empowering Communities, Building Futures" />
-    <meta property="og:description" content="A Ghanaian NGO committed to creating sustainable change through education, healthcare, and community development programs." />
-    <meta property="og:image" content="/images/ghana-hero.jpg" />
+    <meta property="og:title" content="Diligent Vessel Foundation" />
+    <meta property="og:description" content="Empowering communities through education, healthcare, and economic development in Ghana." />
+    <meta property="og:image" content="/assets/images/ghana-hero.jpg" />
     <meta property="og:url" content="https://diligentvessel.org" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@diligentvessel" />
+    <meta name="twitter:title" content="Diligent Vessel Foundation" />
+    <meta name="twitter:description" content="Empowering communities through education, healthcare, and economic development in Ghana." />
+    <meta name="twitter:image" content="/assets/images/ghana-hero.jpg" />
     <meta name="theme-color" content="#3b82f6" />
-    <title>Diligent Vessel Foundation | Empowering Communities in Ghana</title>
+    <title>Diligent Vessel Foundation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
